[project]
name = "chainlit-try"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "chainlit>=2.2.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
chainlit-try = "chainlit_try:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
